Improved actor and director lists

--- a/templates/director.mustache
+++ b/templates/director.mustache
@@ -1,17 +1,3 @@
-<div class="tech tech-item">
-	<a class="tech-thumbnail" href="/app/techs/{{id}}/{{title}}">
-		<img src="{{imageUrl}}" alt="Thumbnail" style="width:100%">
-		{{#featured}}
-		<div class="tech-ribbon tech-ribbon-green">Community Core</div>
-		{{/featured}}
-	</a>
-	<div class="tech-info">
-		<p class="tech-title">{{title}}</p>
-		<a class="tech-creator" href="/app/account/{{ownerID}}">{{creator}}</a>
-		<p class="tech-stats">
-			<a class="subscriptions {{#subscribed}}subscribed{{/subscribed}}" href="#downloads">
-				<span class="glyphicon glyphicon-download-alt" /> {{subscriptions}}
-			</a>
-		</p>
-	</div>
+<div class="director" data-id="{{id}}">
+	<p>{{name}}</p>
 </div>
