--- a/templates/movie-extended.mustache
+++ b/templates/movie-extended.mustache
@@ -1,16 +1,54 @@
 <h2>IMDB info</h2>
-<div class="container">
-	<a href="{{Website}}">Official website</a>
+<div class="container-fluid">
+	<p>
+		<span class="glyphicon glyphicon-globe"/><a href="{{Website}}">Official website</a>
+	</p>
+	<p>
+		<span class="glyphicon glyphicon-usd"/>{{BoxOffice}}
+	</p>
+	<p>
+		<span class="glyphicon glyphicon-calendar"/>{{Released}}
+	</p>
 </div>
 <h2>Scores</h2>
-<div class="container">
+<div class="container-fluid">
 	{{#Ratings}}
 	<p class="row">
 		<span class="col-xs-9">{{Source}}</span>
 		<span class="col-xs-3">{{Value}}</span>
-	</div>
+	</p>
 	{{/Ratings}}
 </div>
 <div class="poster">
 	<img src="{{Poster}}" class="img-responsive"/>
 </div>
+<!--
+	"Title":"The LEGO Batman Movie",
+	"Year":"2017",
+	"Rated":"PG",
+	"Released":"10 Feb 2017",
+	"Runtime":"104 min",
+	"Genre":"Animation, Action, Adventure",
+	"Director":"Chris McKay",
+	"Writer":"Seth Grahame-Smith (screenplay), Chris McKenna (screenplay), Erik Sommers (screenplay), Jared Stern (screenplay), John Whittington (screenplay), Seth Grahame-Smith (story by), Bob Kane (Batman created by), Bill Finger (Batman created by), Jerry Siegel (Superman created by), Joe Shuster (Superman created by)",
+	"Actors":"Will Arnett, Michael Cera, Rosario Dawson, Ralph Fiennes","Plot":"Bruce Wayne must not only deal with the criminals of Gotham City, but also the responsibility of raising a boy he adopted.",
+	"Language":"English",
+	"Country":"USA, Denmark",
+	"Awards":"1 win & 1 nomination.",
+	"Poster":"https://images-na.ssl-images-amazon.com/images/M/MV5BMTcyNTEyOTY0M15BMl5BanBnXkFtZTgwOTAyNzU3MDI@._V1_SX300.jpg",
+	"Ratings":[
+		{"Source":"Internet Movie Database","Value":"7.6/10"},
+		{"Source":"Rotten Tomatoes","Value":"91%"},
+		{"Source":"Metacritic","Value":"75/100"}
+	],
+	"Metascore":"75",
+	"imdbRating":"7.6",
+	"imdbVotes":"33,115",
+	"imdbID":"tt4116284",
+	"Type":"movie",
+	"DVD":"N/A",
+	"BoxOffice":"$158,818,072.00",
+	"Production":"Warner Bros. Pictures",
+	"Website":"http://www.legobatman.com/",
+	"Response":"True"
+-->
