--- a/main.css
+++ b/main.css
@@ -1,3 +1,23 @@
 .properties > .value {
 	margin-right: 20px;
 }
+
+.movie {
+	border: 1px solid #444;
+	background-color:white;
+	padding-bottom:20px;
+	padding-left:30px;
+	padding-right:30px;
+	margin-bottom:50px;
+}
+
+.glyphicon {
+	margin-right: 8px;
+}
+@media (min-width: 768px)
+{
+	.movie-poster img
+	{
+		float:right;
+	}
+}
