--- a/templates/movie.mustache
+++ b/templates/movie.mustache
@@ -1,15 +1,18 @@
 <div class="movie row" data-id="{{id}}" data-local-id="{{local_id}}">
 	<h1 class="title">{{title}}</h1>
-	<div class="movie-info col-sm-12 col-md-6">
-		<p>
-			<span class="glyphicon glyphicon-globe"></span>
-			<a href="{{scraped_url}}">biosdrachten.nl (Wayback Machine)</a></p>
-		<p class="properties">
-			<span class="glyphicon glyphicon-time"></span>
-			<span class="value duration">{{duration}}</span>
-			<span class="glyphicon glyphicon-eye-open"></span>
-			<span class="value min-age">{{minimum_age}}+</span>
-		</p>
+	<div class="movie-info col-xs-12 col-sm-6">
+		<div class="container-fluid">
+			<p>
+				<span class="glyphicon glyphicon-globe"/>
+				<a href="{{scraped_url}}">biosdrachten.nl (Wayback Machine)</a>
+			</p>
+			<p class="properties">
+				<span class="glyphicon glyphicon-time"/>
+				<span class="value duration">{{duration}}</span>
+				<span class="glyphicon glyphicon-eye-open"/>
+				<span class="value min-age">{{minimum_age}}+</span>
+			</p>
+		</div>
 		<p>Directors:</p>
 		<ul class="directors">
 			{{#directors}}
@@ -24,6 +27,6 @@
 		</ul>
 		<button class="btn btn-primary open-data" data-id="{{id}}">Link open data</button>
 	</div>
-	<div class="movie-poster col-sm-12 col-md-6">
+	<div class="movie-poster col-xs-12 col-sm-6">
 	</div>
 </div>
