Added movie sorting

--- a/templates/movie-extended.mustache
+++ b/templates/movie-extended.mustache
@@ -4,10 +4,13 @@
 		<span class="glyphicon glyphicon-globe"/><a href="{{Website}}">Official website</a>
 	</p>
 	<p>
-		<span class="glyphicon glyphicon-usd"/>{{BoxOffice}}
+		<span class="glyphicon glyphicon-user"/>{{Production}}
 	</p>
 	<p>
 		<span class="glyphicon glyphicon-calendar"/>{{Released}}
+	</p>
+	<p>
+		<span class="glyphicon glyphicon-piggy-bank"/>{{BoxOffice}}
 	</p>
 </div>
 <h2>Scores</h2>
