--- a/templates/movie.mustache
+++ b/templates/movie.mustache
@@ -1,5 +1,5 @@
-<div class="movie row" data-id="{{id}}" data-local-id="{{local_id}}">
-	<h1 class="title">{{title}}</h1>
+<div class="movie row item" data-id="{{id}}" data-local-id="{{local_id}}">
+	<h1 class="title">{{title}}<span class="score"/></h1>
 	<div class="movie-info col-xs-12 col-sm-6">
 		<div class="container-fluid">
 			<p>
