--- a/templates/movie-list.mustache
+++ b/templates/movie-list.mustache
@@ -1,3 +1,6 @@
+<button class="btn btn-danger rank-imdb">Rank all movies by IMDB score</button>
+<button class="btn btn-danger rank-tomatoes">Rank all movies by Rotten tomatoes score</button>
+<h1></h1>
 {{#movies}}
 	{{> movie}}
 {{/movies}}
