Improved notation for movie duration

--- a/templates/movie.mustache
+++ b/templates/movie.mustache
@@ -8,7 +8,7 @@
 			</p>
 			<p class="properties">
 				<span class="glyphicon glyphicon-time"/>
-				<span class="value duration">{{duration}}</span>
+				<span class="value duration">{{duration}}min</span>
 				<span class="glyphicon glyphicon-eye-open"/>
 				<span class="value min-age">{{minimum_age}}+</span>
 			</p>
