--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@
 	padding-bottom:20px;
 	padding-left:30px;
 	padding-right:30px;
-	margin-bottom:50px;
+	margin-bottom:10px;
 }
 
 .glyphicon {
@@ -30,4 +30,8 @@
 
 .rank {
 	margin-bottom: 3px;
+}
+
+#main-content {
+	margin-bottom: 50px;
 }
